load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")
load("@io_bazel_rules_docker//container:container.bzl", "container_push" ,"container_image")


# gazelle:prefix github.com/michaelmcallister/visitorcounter
gazelle(name = "gazelle")

go_library(
    name = "visitorcounter_lib",
    srcs = ["main.go"],
    importpath = "github.com/michaelmcallister/visitorcounter",
    visibility = ["//visibility:private"],
    deps = [
        "//datastore",
        "//server",
        "//visitorcounter",
        "@io_etcd_go_bbolt//:go_default_library",
    ],
)

go_binary(
    name = "visitorcounter",
    embed = [":visitorcounter_lib"],
    visibility = ["//visibility:public"],
)

container_image(
    name = "visitorcounter_image",
    base = "@base//image",
    entrypoint = ["./visitorcounter"],
    files = [":visitorcounter"],
    ports = ["8080"]
)

container_push(
   name = "visitorcounter_push",
   image = ":visitorcounter_image",
   format = "Docker",
   registry = "registry.sknk.ws",
   repository = "lab/visitor-counter",
   tag = "latest",
)